fix: error the div below nav is overflow

--- a/thecoffeehouse-web/src/layouts/Blog.css
+++ b/thecoffeehouse-web/src/layouts/Blog.css
@@ -1,4 +1,5 @@
 .blog-container {
+	padding-top: 60px;
 	background-color: #fff7e6;
 	display: flex;
 	align-items: center;
