--- a/thecoffeehouse-web/src/layouts/Menu.css
+++ b/thecoffeehouse-web/src/layouts/Menu.css
@@ -1,4 +1,5 @@
 .menu-container {
+	padding-top: 60px;
 	width: 100%;
 	height: 100%;
 }
